Helm/test/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: automation
spec:
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 5678
  type: ClusterIP
